# gavia-magic-race-predictor

./: .gitignore  README.md  setup.cfg  setup.py
race_prediction/data/: mens_races_top_level.csv  parcours_detail_men.csv  parcours_detail_women.csv  womens_races_top_level.csv
race_prediction/data_processing/: high_level_properties.py
race_prediction/data_sourcing/: uci_api_endpoints.py
race_prediction/tools/: build_vanilla_properties.py  create_rider_result_properties.py
