[metadata]
name=race-predition
description="GCN Race Predictor algorithm"
author="Play Sports Network"
author_email="sam.bennett@playsportsnetwork.com"

[options]
install_requires =
  pandas
  numpy
  requests

setup_requires =
  setuptools_scm
packages = find:

[options.extras_require]
tests =
  pytest
  pytest-cov
  pytest-mock
  mock-firestore

[flake8]
max-line-length = 120
exclude =
  .git
  */setup/*
  ./.eggs/*
  */tests/*
  __init__*
